# smiles

./: Cargo.toml  README.adoc  README.md  bibliography.md  temp  temp copy.md  temp.md
_tests/: atoms.rs
src/: _main.rs  ast.rs  atom.rs  bond.rs  bonds.rs  bracket.rs  chain.rs  charge.rs  chirality.rs  class.rs  errors.rs  hydrogen.rs  language.rs  lexer.rs  lib.rs  organic.rs  parser copy.rs  parser.rs  syntax copy.rs  syntax.rs
src/atoms/: bracket.rs  mod.rs  organic.rs
src/semantic/: error.rs  mod.rs
src/syntax/: ast.rs  error.rs  mod.rs  st.rs  syntax copy.rs
tests/: integration.rs
